Add public transit static GTFS source
